# patterns-practice

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  gtest.cmake  main.cpp
headers/: BattleObserver.h  Board.h  BoardConsoleViewObserver.h  Director.h  Game.h  GameObserver.h  SelfHealCommand.h  SelfHealObserver.h  SelfShieldCommand.h  SelfShieldObserver.h  SideFactory.h  SquadComposite.h  SquadCompositeCombatDecorator.h  Unit.h  UnitBuilder.h
headers/black-builders/: BlackBishopBuilder.h  BlackKingBuilder.h  BlackKnightBuilder.h  BlackPawnBuilder.h  BlackQueenBuilder.h  BlackRookBuilder.h
headers/black-figures/: BlackBishop.h  BlackKing.h  BlackKnight.h  BlackPawn.h  BlackQueen.h  BlackRook.h
headers/common-builders/: BishopBuilder.h  KingBuilder.h  KnightBuilder.h  PawnBuilder.h  QueenBuilder.h  RookBuilder.h
headers/common-figures/: Bishop.h  King.h  Knight.h  Pawn.h  Queen.h  Rook.h
headers/factories/: BlackFactory.h  WhiteFactory.h
headers/white-builders/: WhiteBishopBuilder.h  WhiteKingBuilder.h  WhiteKnightBuilder.h  WhitePawnBuilder.h  WhiteQueenBuilder.h  WhiteRookBuilder.h
headers/white-figures/: WhiteBishop.h  WhiteKing.h  WhiteKnight.h  WhitePawn.h  WhiteQueen.h  WhiteRook.h
sources/: BattleObserver.cpp  Board.cpp  BoardConsoleViewObserver.cpp  Game.cpp  SelfHealCommand.cpp  SelfHealObserver.cpp  SelfShieldCommand.cpp  SelfShieldObserver.cpp  SquadComposite.cpp  SquadCompositeCombatDecorator.cpp
sources/builders/: BishopBuilder.cpp  BlackBishopBuilder.cpp  BlackKingBuilder.cpp  BlackKnightBuilder.cpp  BlackPawnBuilder.cpp  BlackQueenBuilder.cpp  BlackRookBuilder.cpp  Director.cpp  KingBuilder.cpp  KnightBuilder.cpp  PawnBuilder.cpp  QueenBuilder.cpp  RookBuilder.cpp  UnitBuilder.cpp  WhiteBishopBuilder.cpp  WhiteKingBuilder.cpp  WhiteKnightBuilder.cpp  WhitePawnBuilder.cpp  WhiteQueenBuilder.cpp  WhiteRookBuilder.cpp
sources/factories/: BlackFactory.cpp  WhiteFactory.cpp
sources/figures/: Bishop.cpp  BlackPawn.cpp  King.cpp  Knight.cpp  Queen.cpp  Rook.cpp  Unit.cpp  WhitePawn.cpp
tests/: BoardTest.cpp  BuildTest.cpp  CommandsTest.cpp  FactoryTest.cpp  FiguresPossibleTest.cpp  IsFigure.cpp  IsFigure.h  ObserversTest.cpp  SetterCmp.cpp  SetterCmp.h  SetterTest.cpp  SquadCompositeTest.cpp
